<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".MainScreenActivity" >

    <ImageView 
        android:id="@+id/applogo"
        android:contentDescription="@string/app_name"
        android:src="@drawable/shufflelogo"
        android:layout_centerHorizontal="true"
    	android:layout_marginTop="15dp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
        />
    
    <TextView
        android:id="@+id/verView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/applogo"
        android:textIsSelectable="false"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/verView"
        android:layout_centerHorizontal="true" >
    
    	<Button
        	android:id="@+id/playBtn"
        	android:layout_width="match_parent"
        	android:layout_weight="1"
        	android:layout_height="0dp"
        	android:onClick="onClick"
        	android:text="@string/playBtn"/>
    
    	<Button
        	android:id="@+id/hiscoreBtn"
        	android:layout_width="match_parent"
        	android:layout_weight="1"
        	android:layout_height="0dp"
        	android:onClick="onClick"
        	android:text="@string/hiscoreBtn"/>
    	
    	<Button 
    	    android:id="@+id/settingsBtn"
    	    android:layout_width="match_parent"
    	    android:layout_weight="1"
    	    android:layout_height="0dp"
    	    android:onClick="onClick"
    	    android:text="@string/settingsBtn" />
    </LinearLayout>
    
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_alignParentBottom="true" >
    
    	<ImageView
    	    android:id="@+id/companylogo"
    	    android:contentDescription="@string/company"
    	    android:src="@drawable/sheenlogo"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>