<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".WelcomeActivity" >

    <TextView
        android:id="@+id/messageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
        android:layout_margin="5dp"
        android:text="@string/welcome_remark" />
    
    <TextView
        android:id="@+id/howtoView"
        android:layout_below="@id/messageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|left"
        android:layout_margin="5dp"
        android:text="@string/howto" />
    
    <Button 
        android:id="@+id/goBtn"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/howtoView"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/goBtn" />
    
    <com.google.ads.AdView
          android:id="@+id/adView"
    	     android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adUnitId="a15135de367114c"
            ads:adSize="BANNER"
            ads:loadAdOnCreate="true"/>
    
</RelativeLayout>